# alacritty-theme-cycler

./: Cargo.toml  README.md
src/: main.rs
