[package]
name = "alacritty-toggle-themes"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = {version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
skim = "0.20.4"
toml = "0.8.14"

[[bin]]
name = "atc"
path = "src/main.rs"
